--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:0.20.+'
+    compile 'com.facebook.react:react-native:+'
+    compile 'com.facebook.fresco:fresco:0.11.0'
+    compile 'me.relex:photodraweeview:1.0.0'
 }
   
