--- a/example/testSimplePhotoViewer/android/settings.gradle
+++ b/example/testSimplePhotoViewer/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'testSimplePhotoViewer'
+include ':react-native-simple-photo-viewer'
+project(':react-native-simple-photo-viewer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-simple-photo-viewer/android')
+include ':react-native-simple-photo-viewer'
+project(':react-native-simple-photo-viewer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-simple-photo-viewer/android')
 include ':react-native-simple-photo-viewer/'
 project(':react-native-simple-photo-viewer/').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-simple-photo-viewer/android')
 
