--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
-
 {
   "name": "react-native-simple-photo-viewer",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "react-native-photo-view": "^1.2.0"
   },
   "keywords": [
     "react-native"
